EPBDS-15808 Refactoring. Add logging of the uploaded files to the deployment repository